# nuevo-proyecto3

./: CONFIGURACION_GOOGLE_CLOUD.md  CONFIGURACION_RENDER.md  GUIA_DESPLIEGUE_SERVIDOR.md  INSTRUCCIONES_RENDER.md  README.md  RESUMEN_CAMBIOS.md  VERIFICACION_USUARIOS.md  app.py  pyproject.toml  replit.md  requirements.txt  server_credentials.json  setup_auth.py  token.json
GmailBotFlask - copia (3) - copia - copia/: CONFIGURACION_GOOGLE_CLOUD.md  app.py
GmailBotFlask - copia (3) - copia - copia/templates/: index.html
templates/: index.html
