[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.41.1",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "oauthlib>=3.3.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
